--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
   "dependencies": {
     "gatsby": "^2.25.3",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-markdown": "^5.0.2",
+    "react-router-dom": "^5.2.0",
+    "uuid": "^8.3.1"
   },
   "devDependencies": {
     "prettier": "2.1.2"
