--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "deploy": "gatsby build --prefix-paths && gh-pages -d public"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
     "gatsby": "^2.25.3",
     "gh-pages": "^3.1.0",
     "react": "^16.12.0",
